--- a/registration/login.html
+++ b/registration/login.html
@@ -21,7 +21,7 @@
 </table>
  
 <input type="submit" value="login" />
-<input type="hidden" name="next" value="/philosopher" />
+<input type="hidden" name="next" value="/" />
 </form>
  
 {% endblock %}
